fixed: table jump efect when row select

--- a/styles/project/components/_table-view.scss
+++ b/styles/project/components/_table-view.scss
@@ -110,6 +110,7 @@ $table-view-default-marging: 5px;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    height:20px;
   }
 
   &__action {
